--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,3 @@
-:root{
-    --primary-orange: rgba(255,112,67,1);
-}
 #footer ul,
 ol{
     list-style-type: none;
@@ -117,7 +114,7 @@ ol{
     height: 10px;
 }
 
-a:after {
+#footer a:after {
 	content: '';
     position: absolute;
     display: inline-block;
@@ -134,7 +131,7 @@ a:after {
 	transform: scale(0,1);
 }
 
-a:hover:after {
+#footer a:hover:after {
     opacity: 1;
 	-webkit-transform: scale(1);
 	transform: scale(1);
