--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -20,6 +20,14 @@
     box-shadow: 0px 0px 4px 2px #7a7a7a98;
 }
 
+.formulaire textarea{
+    width: 60%;
+    margin:0;
+    padding:0;
+    border: none;
+    box-shadow: 0px 0px 4px 2px #7a7a7a98;
+}
+
 .formulaire h1{
     font-family: Raleway;
 }
@@ -32,7 +40,7 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     flex-wrap: wrap;
     box-shadow: 0px 0px 20px 10px #7a7a7a98;
 }
@@ -43,9 +51,10 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     margin-bottom: 10px;
 }
+
 .formulaire #button{
 -moz-box-shadow: 0px 0px 7px 1px #000000;
 -webkit-box-shadow: 0px 0px 7px 1px #000000;
@@ -85,7 +94,7 @@ top:1px;
 
     .formulaire .part{
         flex: 0 0 50%;
-    } 
+    }
 
     .formulaire .part:last-child{
         flex:0 0 100%;
@@ -93,4 +102,3 @@ top:1px;
 
 
 }
-
