--- a/css/panier.css
+++ b/css/panier.css
@@ -9,10 +9,11 @@
     border-radius: 35px;
     background-color: var(--primary-orange);
     position: fixed;
-    top: 50px;
+    top: 20px;
     right: 10px;
     cursor: pointer;
     opacity: .5;
+    z-index: 999;
 }
 
 #panier #items{
