--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,12 @@ ol{
     text-decoration: none;
 }
 
+#footer a:hover{
+    color:rgb(112, 112, 112);
+    text-decoration: underline;
+}
+
+
 #footer{
     width: 100%;
     height: 300px;
@@ -114,25 +120,19 @@ ol{
     height: 10px;
 }
 
-#footer a:after {
-	content: '';
-    position: absolute;
-    display: inline-block;
-    height: 1em;
-    left:38%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    border-bottom: 1px solid;
-    opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: scale(0,1);
-	transform: scale(0,1);
-}
+@media screen and (min-width: 800px) {
+    #footer .flex{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around;
+        border-top : 2px solid grey;
+    } 
 
-#footer a:hover:after {
-    opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
+    #footer .navig{
+        border: none;
+    }
+
+    #footer .menufooter{
+        border:none;
+    }
 }
