--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: var(--fontText);
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: var(--fontTitle);
+}
+
 @media screen and (min-width: 800px) {
     #contenair{
         margin-top: 6vh;
