--- a/css/menu.css
+++ b/css/menu.css
@@ -146,18 +146,23 @@
         padding:0;
     }
 
+    header{
+        height: 7vh;
+    }
+
     #menu li {
         margin-left:4vh;
     }
-    #menu a{
+    #menu a, #menu .submenuTitle{
         text-decoration: none;
         color:rgb(0, 0, 0);
         text-transform: capitalize;
         font-size: 3vh;
+        cursor: pointer;
     }
 
 
-    #menu a:hover{
+    #menu a:hover, #menu .submenuTitle:hover{
         color:rgb(112, 112, 112);
         text-decoration: underline;
     }
@@ -228,6 +233,19 @@
         visibility: visible;
         position: relative;
         margin-left:3vh;
+    }
+
+    #menu .submenuroll{
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        z-index: 999;
+    }
+
+    #menu .submenuroll li{
+        margin: none;
     }
 
 
