affichage produit, correction menu

--- a/css/category.css
+++ b/css/category.css
@@ -1,28 +1,17 @@
-*{
-    box-sizing: border-box;
-}
-
-html,
-body{
-    margin:0;
-    padding:0;
-}
-
-#produits{
-    position: fixed;
+#category{
 }
 
 
-#produits input{
+#category input{
     color: black;
     font-size: 2.5vh;
     margin-left:2vw;
 }
 
-#produits li{
+#category li{
     list-style: none;
     margin-left:5vw;
-    line-height: 3.5vh;  
+    line-height: 3.5vh;
 }
 
 /* #produits .grid{
@@ -36,40 +25,40 @@ body{
     position: fixed;
 } */
 
-#produits .submit{
+#category .submit{
     grid-column: 4/5;
-    grid-row:1/2; 
+    grid-row:1/2;
 }
 
-#produits .choixFormes{
+#category .choixFormes{
     grid-column: 2/3;
     grid-row: 1/2;
 }
 
 
-#produits .formes{
+#category .formes{
     grid-column :2/3;
     grid-row: 2/3;
-    
+
 }
 
-#produits .choixMatieres{
+#category .choixMatieres{
     grid-column: 3/4;
     grid-row: 1/2;
 }
-#produits .matieres{
+#category .matieres{
     grid-column: 3/4;
     grid-row: 2/3;
 }
 
-#produits button{
+#category .filterButton{
     margin-right:1vw;
     background-color: rgba(0, 0, 0, 0);
     color: black;
     border:none;
     font-size:3vh;
     transition: .8s;
-    width:26vw;
+    width:24vw;
     height: 35px;
     font-size: 3vh;
     text-align: center;
@@ -78,7 +67,7 @@ body{
     transition: .5s all;
 }
 
-#produits button:hover{
+#category .filterButton:hover{
     /* margin-right: 10px; */
     left: 2px;
     /* background-color: black; */
@@ -87,20 +76,91 @@ body{
     font-size:3vh;
 }
 
-#produits .button{
+#category .button{
     /* width:100%; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 35px 1fr;
-
 }
 
-#produits .couleurs, .formes, .matieres{
+#category .couleurs, .formes, .matieres{
     display: none;
     margin-right:2vh;
 }
 
-#produits .couleursappear, .formesappear, .matieresappear{
+#category .couleursappear, .formesappear, .matieresappear{
     display: inline;
 }
 
+#category .filter{
+    margin-bottom : 20px;
+}
+
+#category .produits{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#category .produits .produit{
+    border: 1px dotted var(--primary-orange);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    height: 320px;
+}
+
+#category .produits .produit:hover{
+    border: 1px solid var(--primary-orange);
+    box-shadow: 0px 0px 20px 10px #7a7a7a58;
+}
+
+#category .produits .produit img{
+    width: 200px;
+}
+
+#category .produits .produit div{
+    margin-top: 5px;
+    padding: 15px 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px dotted #e7e7e7;
+}
+
+#category .produits .produit .nom{
+    font-weight: bold;
+    font-size: 18px;
+    font-family: var(--fontText);
+}
+
+#category .toBasket{
+    box-shadow: 0px 0px 7px 1px #000000;
+    background-color:var(--primary-orange);
+    border-radius:12px;
+    border:2px solid #ffffff;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Impact;
+    font-size:14px;
+    font-weight:bold;
+    padding:4px 14px;
+    text-decoration:none;
+}
+
+
+#category .toBasket:hover {
+background-color:#ffffff;
+}
+#category .toBasket:active {
+position:relative;
+top:1px;
+}
