--- a/css/menu.css
+++ b/css/menu.css
@@ -5,7 +5,7 @@
         padding:0;
     }
 
-    #menu a{
+    #menu a, #menu .submenuTitle{
         text-decoration: none;
         color:rgb(0, 0, 0);
         text-transform: capitalize;
@@ -13,7 +13,7 @@
     }
 
 
-    #menu a:hover{
+    #menu a:hover, #menu .submenuTitle:hover{
         color:rgb(112, 112, 112);
         text-decoration: underline;
     }
