--- a/css/produit.css
+++ b/css/produit.css
@@ -1,27 +1,24 @@
 #produit {
   position: relative;
-  height: 80vh;
   background-color: var(--primary-white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #produit .name {
   text-align: center;
-  font-size: 17px;
+  font-size: 30px;
   color: red;
   padding-top: 20px;
+  margin-bottom: 30px;
 }
 #produit .Img {
-  margin-top: 20px;
-  height: 30vh;
   background-color: rgb(255, 255, 255);
 }
 #produit .Img img {
-  position: absolute;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  left: 10%;
-  width: 80%;
-  /* height: 40vh; */
+  height: 30vh;
+
 }
 #produit .flex {
   display: flex;
@@ -29,6 +26,7 @@
   justify-content: space-around;
   text-align: center;
   width: 100%;
+  margin-top: 30px;
 }
 
 #produit .color-red {
@@ -85,16 +83,9 @@
 
 @media only screen and (min-width: 800px) {
   #produit {
-    height: 70vh;
-  }
-  #produit .name {
-    margin-top: 100px;
   }
   #produit .Img img {
-    margin-top: 40px;
-    left: 33%;
     height: 30vh;
-    width: 33%;
   }
   #produit .ajouPanier {
     right: 40vh;
