--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,97 @@ h1, h2, h3, h4, h5, h6{
     font-family: var(--fontTitle);
 }
 
+.last3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.last3 h3{  
+    flex: 0 0 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.last3 a{
+    color: black;
+    text-decoration: none;
+}
+
+.last3 .produit{
+    border: 1px dotted var(--primary-orange);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    height: 320px;
+}
+
+.last3 .produit:hover{
+    border: 1px solid var(--primary-orange);
+    box-shadow: 0px 0px 20px 10px #7a7a7a58;
+}
+
+.last3 .produit img{
+    width : 200px;
+}
+
+.last3 .produit .flex{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.last3 .produit .nom{
+    font-weight: bold;
+    font-size: 18px;
+    font-family: var(--fontText);
+}
+
+.last3 .produit .prix{
+    font-weight: bold;
+    font-family: var(--fontText);
+    color: var(--primary-orange);
+}
+
+.last3 .toBasket{
+    box-shadow: 0px 0px 7px 1px #000000;
+    background-color:var(--primary-orange);
+    border-radius:12px;
+    border:2px solid #ffffff;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Impact;
+    font-size:14px;
+    font-weight:bold;
+    padding:4px 14px;
+    text-decoration:none;
+}
+
+
+.last3 .toBasket:hover {
+background-color:#ffffff;
+}
+.last3 .toBasket:active {
+position:relative;
+top:1px;
+}
+
+
+
 @media screen and (min-width: 800px) {
     #contenair{
         margin: 6vh 0;
     }
+
+.last3{
+    flex-direction: row;
+}
 }
