--- a/css/sliderPromo.css
+++ b/css/sliderPromo.css
@@ -1,21 +1,10 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
 @media screen  and (max-width: 800px) {
   #SlidePromo {
     width: 100%;
     height: 25vh !important;
-    
+
   }
-  #imgSliderPromo {
+  /* #imgSliderPromo {
     width: 100%;
     height: 25vh!important;
     background-size: contain;
@@ -26,16 +15,30 @@ body {
   }
   #test {
     display: none;
-   
-  }
+
+  } */
 }
 
 #SlidePromo {
   width: 100%;
   height: 30vh;
-  /* margin-top: 5vh; */
+  position: relative;
 }
-#imgSliderPromo {
+
+#SlidePromo img{
+    width: 100%;
+    height: 30vh;
+    position: absolute;
+    top: 0; left: 0;
+    opacity: 0;
+    transition: all .5s;
+}
+
+#SlidePromo img.show{
+    opacity: 1;
+}
+
+/* #imgSliderPromo {
   width: 100%;
   height: 40vh;
   background-size: contain;
@@ -43,6 +46,7 @@ body {
   background-blend-mode: lighten;
   background-attachment: fixed;
   background-position: center;
+  display: none;
 }
 
 #test {
@@ -54,4 +58,4 @@ body {
   border-right: 30vmax solid transparent;
 
   opacity: 0.8;
-}
+} */
