--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,15 @@ h1, h2, h3, h4, h5, h6{
     font-family: var(--fontTitle);
 }
 
+#mainTitle{
+    width: 100%;
+    text-align: center;
+    color: var(--primary-orange);
+    margin: 20px 0px;
+    padding-top: 25px;
+    font-size: 40px;
+}
+
 .last3{
     display: flex;
     flex-direction: column;
@@ -16,7 +25,7 @@ h1, h2, h3, h4, h5, h6{
     flex-wrap: wrap;
 }
 
-.last3 h3{  
+.last3 h3{
     flex: 0 0 100%;
     text-align: center;
     margin-bottom: 20px;
