--- a/css/menu.css
+++ b/css/menu.css
@@ -143,13 +143,13 @@
 
 
     #menu .submenuroll{
-        background-color: white;
+        background-color: rgba(244, 244, 244, 0.88);
         margin-top: 25px;
         margin-left:0vh;
     }
     #menu .submenuroll li{
         margin: 0;
-        background-color: white;
+        background-color: rgba(244, 244, 244, 0.88);
     }
     #menu li {
         margin-left:4vh;
